--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "geist": "^1.3.1",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
+    "nextjs-toploader": "^3.7.15",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "tailwind-merge": "^2.5.4",
